--- a/app/src/main/res/layout/tag_item_layout.xml
+++ b/app/src/main/res/layout/tag_item_layout.xml
@@ -31,14 +31,38 @@
                 android:layout_height="@dimen/recyclerviewTagHeight"
                 android:layout_margin="@dimen/zero"
                 android:background="@drawable/ic_view_tag_bg"
-                android:drawableEnd="@drawable/ic_close_white_24dp"
+                android:button="@null"
                 android:drawablePadding="@dimen/sm_padding"
-                android:drawableRight="@drawable/ic_close_white_24dp"
                 android:gravity="center_vertical|center_horizontal"
                 android:maxLines="1"
                 android:padding="@dimen/sm_padding"
+                android:paddingEnd="@dimen/lg_padding"
+                android:paddingRight="@dimen/lg_padding"
+                android:stateListAnimator="@null"
+                android:text="tag"
                 android:textAlignment="gravity"
+                android:textAppearance="@style/AppTheme.AutoFillText"
                 android:textColor="@color/white" />
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tag_toggle"
+                app:layout_constraintEnd_toEndOf="@id/tag_toggle"
+                app:layout_constraintRight_toRightOf="@+id/tag_toggle"
+                app:layout_constraintTop_toTopOf="@+id/tag_toggle">
+
+                <ImageView
+                    android:id="@+id/tag_close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_close_white_24dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/tag_toggle"
+                    app:layout_constraintEnd_toEndOf="@id/tag_toggle"
+                    app:layout_constraintRight_toRightOf="@+id/tag_toggle"
+                    app:layout_constraintTop_toTopOf="@+id/tag_toggle" />
+
+            </FrameLayout>
 
 
         </android.support.constraint.ConstraintLayout>
