--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,11 @@
 
     </style>
 
+    <style name="AppTheme.AutoFillText" parent="TextAppearance.AppCompat.Small">
+        <item name="autoSizeTextType">uniform</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 
     <style name="AppTheme.EditTextStyle" parent="Base.V7.Widget.AppCompat.EditText">
         <item name="android:layout_height">42dp</item>
