--- a/app/src/main/res/layout/post_item_layout.xml
+++ b/app/src/main/res/layout/post_item_layout.xml
@@ -119,7 +119,7 @@
                     android:paddingStart="@dimen/sm_padding"
                     android:paddingTop="@dimen/zero"
                     android:textColor="@color/grayDarkTextColor"
-                    app:fontFamily="@font/junicode" />
+                    app:fontFamily="@font/cairo_regular" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/post_area"
@@ -128,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/sm_padding"
                     android:textColor="@color/grayDarkTextColor"
-                    app:fontFamily="@font/junicode" />
+                    app:fontFamily="@font/cairo_regular" />
 
             </LinearLayout>
 
@@ -150,7 +150,7 @@
                 android:shadowRadius="@integer/textShadow"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                app:fontFamily="@font/roboto_bold"
+                app:fontFamily="@font/cairo_regular"
                 app:layout_constraintTop_toBottomOf="@+id/post_separator" />
 
             <TextView
