--- a/app/src/main/res/layout/post_search_layout.xml
+++ b/app/src/main/res/layout/post_search_layout.xml
@@ -132,6 +132,7 @@
                         android:id="@+id/subCategoryContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
                         android:orientation="vertical">
 
                         <TextView
@@ -158,7 +159,6 @@
 
                     </LinearLayout>
 
-
                     <TextView
                         style="@style/AppTheme.TextAppearance"
                         android:layout_width="match_parent"
@@ -181,6 +181,7 @@
                         android:background="@color/black" />
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:id="@+id/areaContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
