--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -17,18 +17,19 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sm_margin"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/md_margin"
         android:background="@color/white"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="@dimen/cardRadius"
         app:cardElevation="@dimen/lg_elevation"
         app:cardUseCompatPadding="true"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline">
-
+        app:layout_constraintTop_toTopOf="parent">
+        <!--app:layout_constraintBottom_toTopOf="@+id/guideline"-->
+        <!--app:layout_constraintTop_toTopOf="@+id/guideline"-->
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -114,7 +115,7 @@
                     app:errorEnabled="true"
                     app:hintEnabled="false">
 
-                    <android.support.v7.widget.AppCompatEditText
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/birthdate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
