--- a/app/src/main/res/layout/checklocation_layout.xml
+++ b/app/src/main/res/layout/checklocation_layout.xml
@@ -10,6 +10,7 @@
         android:id="@+id/gps_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/transparent"
         android:textSize="15sp" />
 
 </LinearLayout>
